# Job-replaceability-analyser-

./: README.md
job-replaceability-analyser/: CONTRIBUTING.md  LICENSE  pyproject.toml  requirements.txt
job-replaceability-analyser/api/: __init__.py  auth.py  routes.py  schemas.py
job-replaceability-analyser/config/: settings.yaml
job-replaceability-analyser/core/: __init__.py  dimensions.py  projections.py  scorer.py  taxonomy.py
job-replaceability-analyser/data/roles/: ciso.json  devsecops_engineer.json  grc_analyst.json  incident_responder.json  penetration_tester.json  soc_analyst_t1.json  threat_intel_analyst.json
job-replaceability-analyser/docs/: api-reference.md  methodology.md
job-replaceability-analyser/tests/: conftest.py
job-replaceability-analyser/tests/integration/: test_api.py
job-replaceability-analyser/tests/unit/: test_scorer.py
