[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "job-replaceability-analyser"
version = "1.0.0"
description = "Assess how vulnerable cybersecurity roles are to replacement by AI and automation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["cybersecurity", "AI", "automation", "workforce", "replaceability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
analyse-role = "core.scorer:_cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=core --cov=api --cov-report=term-missing -v"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
